# netrunnerCommunityBanlist

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.devcontainer/: devcontainer.json
banlist/: __init__.py  models.py  nrdb.py  routes.py  search.py  voting.py
banlist/static/: style.css
banlist/templates/: banlist.html  base.html  faq.html  index.html
